// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mops build error 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli build foo --verbose

build canister foo
moc-wrapper ["-c","--idl","-o",".mops/.build/foo.wasm","src/Foo.mo","--package","core",".mops/core@1.0.0/src","--release","--public-metadata","candid:service","--public-metadata","candid:args"]
Adding metadata to .mops/.build/foo.wasm
build canister foo: 412.615ms

✓ Built 1 canister successfully",
}
`;

exports[`mops build error 2`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli build bar

build canister bar",
}
`;

exports[`mops build error 3`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli build foo bar

build canister foo
build canister bar",
}
`;

exports[`mops build success 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli build --verbose

build canister foo
moc-wrapper ["-c","--idl","-o",".mops/.build/foo.wasm","src/Foo.mo","--package","core",".mops/core@1.0.0/src","--release","--public-metadata","candid:service","--public-metadata","candid:args"]
Adding metadata to .mops/.build/foo.wasm
build canister foo: 338.175ms
build canister bar
moc-wrapper ["-c","--idl","-o",".mops/.build/bar.wasm","src/Bar.mo","--package","core",".mops/core@1.0.0/src","--release","--incremental-gc","--public-metadata","candid:service","--public-metadata","candid:args"]
Candid compatibility check passed for canister bar
Adding metadata to .mops/.build/bar.wasm
build canister bar: 324.677ms

✓ Built 2 canisters successfully",
}
`;

exports[`mops build success 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli build foo

build canister foo

✓ Built 1 canister successfully",
}
`;

exports[`mops build success 3`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli build bar

build canister bar

✓ Built 1 canister successfully",
}
`;

exports[`mops build success 4`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli build foo bar

build canister foo
build canister bar

✓ Built 2 canisters successfully",
}
`;

exports[`mops check-candid 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid a.did a.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid b.did b.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 3`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid c.did c.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 4`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid a.did b.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 5`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid b.did a.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 6`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid a.did c.did
",
}
`;

exports[`mops check-candid 7`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid c.did a.did
",
}
`;

exports[`mops check-candid 8`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid b.did c.did
",
}
`;

exports[`mops check-candid 9`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli check-candid c.did b.did
",
}
`;

exports[`mops lint 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli lint src/Valid.mo --verbose

Could not find any Motoko files to lint",
}
`;

exports[`mops lint 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@2.0.1 mops
> tsx ./environments/nodejs/cli lint src/NoBoolSwitch.mo --verbose

/Users/ryan/Library/Caches/mops/lintoko/0.7.0/lintoko ["--verbose","src/NoBoolSwitch.mo"]
lint Running lintoko...
[34mDEBUG[0m file input: src/NoBoolSwitch.mo
[34mDEBUG[0m Linting file: src/NoBoolSwitch.mo
✓ Lint succeeded",
}
`;
